<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/menu_dashboard"
            android:title="@string/nav_menu_dashboard"
            android:icon="@drawable/ic_home"/>
        <item
            android:id="@+id/menu_pengajuan_pinjaman"
            android:title="@string/nav_menu_pengajuan_pinjaman"
            android:icon="@drawable/ic_menu_pinjaman"/>
        <item
            android:id="@+id/menu_pinjaman_saya"
            android:title="@string/nav_menu_pinjaman_saya"
            android:icon="@drawable/ic_menu_pinjaman_saya"/>

        <item
            android:id="@+id/menu_account_borrower"
            android:icon="@drawable/ic_account_circle"
            android:title="@string/nav_menu_account" />
        <item
            android:id="@+id/menu_logout_borrower"
            android:icon="@drawable/ic_logout"
            android:title="@string/nav_menu_logout" />
    </group>

</menu>
