<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_main_activity">

        <RelativeLayout
            android:id="@+id/header_syarat"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            >
                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:layout_marginStart="12dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/txt_syarat_ketentuan"
                    android:textColor="@color/colorWhite"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    android:layout_alignParentTop="true"
                    android:layout_alignParentLeft="true"
                    android:layout_alignParentStart="true" />
        </RelativeLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/header_syarat"
            android:layout_marginLeft="@dimen/side_padding"
            android:layout_marginRight="@dimen/side_padding"
            android:layout_marginTop="@dimen/side_padding"
            android:layout_marginBottom="@dimen/side_padding"
            >

                <RelativeLayout
                    android:id="@+id/syarat_child"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="@dimen/double_side_padding">

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_ringkasan"
                            android:textSize="15sp"
                            android:textColor="@color/colorWhite"
                            android:layout_marginTop="24dp"
                            android:id="@+id/textView4" />


                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_persyaratan"
                            android:textSize="15sp"
                            android:textColor="@color/colorWhite"
                            android:id="@+id/textView3"
                            android:layout_marginTop="48dp"
                            android:layout_below="@+id/textView4"
                            android:layout_alignLeft="@+id/textView4"
                            android:layout_alignStart="@+id/textView4" />

                        <TextView
                            android:layout_width="320dp"
                            android:layout_height="wrap_content"
                            android:text="@string/txt_manfaat_produk"
                            android:textSize="15sp"
                            android:textColor="@color/colorWhite"
                            android:id="@+id/textView5"
                            android:layout_below="@+id/textView3"
                            android:layout_alignLeft="@+id/textView3"
                            android:layout_alignStart="@+id/textView3"
                            android:layout_marginTop="40dp" />

                </RelativeLayout>
        </ScrollView>


        <RelativeLayout
            android:id="@+id/layout_button"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/double_side_padding">

                <Button
                    android:id="@+id/btnTidak"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:textSize="12sp"
                    android:textColor="@color/colorWhite"
                    android:text="@string/txt_tidak"
                    android:background="@color/bg_secondary_activity"
                    android:layout_alignParentBottom="true"
                    android:layout_marginLeft="15dp"
                    android:layout_marginStart="13dp"
                    android:layout_marginBottom="48dp" />

                <Button
                    android:id="@+id/btnSetuju"
                    android:layout_width="150dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="26dp"
                    android:layout_marginRight="15dp"
                    android:background="@color/bg_secondary_activity"
                    android:text="@string/txt_setuju"
                    android:textColor="@color/colorWhite"
                    android:textSize="12sp"
                    android:layout_alignBaseline="@+id/btnTidak"
                    android:layout_marginBottom="48dp"
                    android:layout_alignParentRight="true" />

        </RelativeLayout>



</RelativeLayout>
